feat(demo): add object recognition fire smoke
